--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>electron-vite-template</title>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>electron-vite-template</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/main.ts"></script>
-  <script>
+<div id="app" style="padding-top: 30px"></div>
+<script type="module" src="./main.ts"></script>
+<script>
     if (process && process.env.NODE_ENV === 'development') {
-      window.__static = `http://localhost:${process.env.PORT}`
+        window.__static = `http://localhost:${process.env.PORT}`
     } else {
-      window.__static = __dirname
+        window.__static = __dirname
     }
 
-  </script>
+</script>
 </body>
 
 </html>
